apps/gateway/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gateway-system
  labels:
    environment: dev
    team: devops
  annotations:
    owner: "Prashanth"
    purpose: "Namespace for gateway service"
